--- a/main.html
+++ b/main.html
@@ -10,12 +10,12 @@
 	<table border="1"style="width:100%;">
 		<thead>
 			<tr>
-			<td>part</td>
-			<td>XS</td>
-			<td>S</td>
-			<td>M</td>
-			<td>L</td>
-			<td>XL</td>
+			<th>part</th>
+			<th>XS</th>
+			<th>S</th>
+			<th>M</th>
+			<th>L</th>
+			<th>XL</th>
 		</tr>
 		</thead>
 		<tbody>
@@ -28,7 +28,7 @@
 				<td>32</td>
 			</tr>
 			<tr>
-				<td>Sleeve</td>
+				<td>Chest</td>
 				<td>34</td>
 				<td>34</td>
 				<td>38</td>
