--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<table border="1"style="width:100%;">
 		<thead>
 			<tr>
-			<th>part</th>
+			<th>Part</th>
 			<th>XS</th>
 			<th>S</th>
 			<th>M</th>
